# StudyShare

./: .gitignore  CONTRIBUTIONS.md  pyproject.toml  readme.md  requirements.txt  requrements.txt
flaskr/: __init__.py  auth.py  dashboard.py  db.py  post.py
flaskr/static/: style.css
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/post/: create.html  edit.html  index.html  view.html
tests/: conftest.py  test_auth.py  test_dashboard.py  test_db.py
